--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
               android:paddingRight="@dimen/activity_horizontal_margin"
               android:paddingTop="@dimen/activity_vertical_margin"
               android:background="@android:color/darker_gray"
-              tools:context="com.xiaobailong24.smartrouter.LoginActivity">
+              tools:context="me.xiaobailong24.smartrouter.LoginActivity">
 
     <!-- Login progress -->
     <ProgressBar
